--- a/ADK Project 01/shop_agent_project/shop_agent.ipynb
+++ b/ADK Project 01/shop_agent_project/shop_agent.ipynb
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "bb4b79a7",
    "metadata": {},
    "outputs": [],
@@ -258,7 +258,7 @@
     "\n",
     "# Set environment variables required for running ADK (with Gemini API Key)\n",
     "os.environ[\"GOOGLE_GENAI_USE_VERTEXAI\"] = \"False\"\n",
-    "os.environ[\"GOOGLE_API_KEY\"] = \"AIzaSyDTWKl7RSWOHOCUVwKt8VfAo3gepgA9ozg\"\n",
+    "os.environ[\"GOOGLE_API_KEY\"] = \"\"\n",
     "\n",
     "# To use Vertex AI instead of Gemini API Key in Colab Enterprise or Cloud Workbench, use the following:\n",
     "#[PROJECT_ID] = !gcloud config list --format \"value(core.project)\"\n",
